@@ -1,3 +1,6 @@
+2009-07-11
+	* Added support for $desktop, $desktop_number and $desktop_name (sf.net #2040528)
+
 2009-07-09
 	* Added support for $swapfree
 	* Improved Lua API (lua_read_parse has been removed in favour of the
